--- a/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_osc.css
+++ b/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_osc.css
@@ -102,6 +102,8 @@
 .card .card_front .select_wrapper {
     position: relative;
     cursor: pointer;
+    float: left;
+    width: 100%;
 }
 .card .card_front .select_wrapper select {
     margin-top: 0;
@@ -136,28 +138,19 @@
 
 /* Expiration */
 
-.card .card_front .expiration_container {
+
+
+
+.card .card_front .expirationMonth_container {
     float:left;
-    width: 100%;
+    width: 50%;
     margin-bottom: 10px;
     margin-top: 10px;
 }
 
-.card .card_front .expiration_container {
-    clear:both;
-}
-
-.card .card_front .expiration_container label {
-    width: 100%;
-    float: left;
-}
-
-.card .card_front .expiration_container .select_wrapper {
-    float: left;
-    width: 50%;
-}
-
-.card .card_front .expiration_container .select_wrapper:nth-child(3) {
+.card .card_front .expirationYear_container {
+    margin-top: 10px;
+    float:left;
     width       :43%; /* IE backup */
     width       :calc(50% - 10px);
     margin-left :10px;
@@ -185,6 +178,18 @@
 }
 
 /* Credit Card - Styled ============================================================================================= */
+
+/* Errors */
+
+.card.styled .validation-advice {
+    text-transform: none;
+    font-family: "Helvetica Neue", Verdana, Arial, sans-serif;
+    margin-top: 2px;
+    float: left;
+    width: 100%;
+    font-size: 12px;
+    text-align: right;
+}
 
 .card.styled {
     font-family: "Courier New", "Helvetica Neue", Verdana, Arial, sans-serif;
@@ -230,7 +235,7 @@
     float:left;
     max-width: 320px;
     width: 100%;
-    height: 200px;
+    min-height: 200px;
     padding: 20px;
     border-radius:8px;
     z-index: 20;
@@ -315,6 +320,7 @@
     width: 100%;
     background-image: linear-gradient(transparent 50%, rgba(179, 206, 239, 0.2) 50%);
     background-size: 7px 4px;
+    max-height: 46px;
 }
 
 .card.styled .card_back .card_security label {
