changed card issuers to just 'card' in checkout

--- a/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
@@ -6,7 +6,7 @@
         <div class="card <?php echo $this->designValue() ?>">
             <div class="card_front">
                 <div class="cardType_container">
-                     <label for="buckaroo3extended_creditcard_method"><?php echo $this->__('Card type'); ?></label>
+                     <label for="buckaroo3extended_creditcard_method"><?php echo $this->__('Card'); ?></label>
                     <div class="select_wrapper">
                         <select id="buckaroo3extended_creditcard_method" class="required-entry" name="buckaroo3extended_creditcard_method" onchange="changeCardLogo(this.options[this.selectedIndex])">
                             <option value="" data-logo="/creditcard_types/creditcard_blank.png"><?php echo $this->__('Please choose'); ?></option>
