remove rwd files + add translations + reorder fields

--- a/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
+++ b/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
@@ -114,11 +114,24 @@
     text-align: right;
 }
 
+/* Card Kind */
+.card .card_front .card_kind {
+    margin-bottom: 10px;
+}
+
+.card.styled .card_front .card_kind {
+    position: absolute;
+    top: 30px;
+    right: 20px;
+    text-align: right;
+}
+
 /* Card Type */
 
 .card.styled .cardType_container {
-    width: 50%;
+    width: 70%;
     float:left;
+    margin-top: -6px;
 }
 
 .card.styled .cardType_container .select_wrapper {
@@ -129,9 +142,8 @@
 /* Card Number */
 
 .card.styled .cardNumber_container {
-    width: 43%; /* IE backup */
-    width: calc(50% - 10px);
-    margin-left: 10px;
+    width: 100%;
+    margin: 10px 0 0 0;
     float:left;
 }
 
@@ -158,7 +170,6 @@
 .card.styled input[type="tel"] {
     height: 35px;
     border: 1px solid #d1d1d1;
-    margin-left: 10px;
     padding: 0 10px;
     background: white;
 }
@@ -189,7 +200,7 @@
 .card.styled .card_front .cardHolderName_container {
     float:left;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     margin-top: 10px;
 }
 
@@ -248,19 +259,15 @@
     pointer-events: none;
 }
 
-.card.styled .card_front .cardHolderName_container {
-    margin: 5px 0 0 0;
-}
-
 .card.styled .card_front .cardHolderName_container label {
-    max-width: 40%;
+    max-width: 100%;
     float: left;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .card.styled .card_front .cardHolderName_container input {
-    max-width: 60%;
+    max-width: 100%;
     width: 100%;
     float: left;
     margin: 0;
@@ -300,10 +307,13 @@
 }
 
 .card.styled .card_back .card_security label {
-    max-width: 30%;
+    max-width: 60%;
     width: 100%;
     float:left !important;
-    padding-top: 4px;
+    padding-top: 9px;
+    overflow: hidden;
+    -ms-text-overflow :ellipsis;
+    text-overflow :ellipsis;
 }
 
 .card.styled .card_back .card_security input {
@@ -311,15 +321,9 @@
     width: 100%;
     float: left;
     text-align: center;
-    border-color: #e8ecf3;
+    border-color: #c4d1e6;
 }
 
-.card.styled .card_back .card_kind {
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    text-align: right;
-}
 
 /* Creditcard Security Code - Tooltip =============================================================================== */
 
@@ -329,7 +333,8 @@
 
 .card .card_security .info {
     float:left;
-    width: 20%;
+    text-align :center;
+    width: 15%;
     position: relative;
 }
 
@@ -425,7 +430,7 @@
 
 .card.styled .card_security .field {
     float:left;
-    width: 50%;
+    width: 25%;
     margin: 0;
 }
 
