--- a/app/design/frontend/base/default/template/buckaroo3extended/creditcard/checkout/form.phtml
+++ b/app/design/frontend/base/default/template/buckaroo3extended/creditcard/checkout/form.phtml
@@ -69,7 +69,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="510" height="510" viewBox="0 0 510 510"><path d="M229.5 382.5h51v-153h-51V382.5zM255 0C114.8 0 0 114.8 0 255s114.8 255 255 255 255-114.7 255-255S395.3 0 255 0zM255 459c-112.2 0-204-91.8-204-204S142.8 51 255 51s204 91.8 204 204S367.2 459 255 459zM229.5 178.5h51v-51h-51V178.5z"/></svg>
                         <div class="popup">
                             <div><?php echo $this->__('CVV or CVC. <br/><br/>')?></div>
-                            <div><?php echo $this->__('A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.')?></div>
+                            <div><?php echo $this->__('A 3 or 4 digit code located to the right of signature strip on the back of your card, separate from the card number.')?></div>
                         </div>
                     </div>
                 </div>
