--- a/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
+++ b/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
@@ -102,6 +102,10 @@
     box-sizing: border-box;
 }
 
+dd#dd_method_buckaroo3extended_creditcard {
+    overflow: hidden;
+}
+
 /* Errors */
 
 .card.styled .validation-advice {
